syntax = "proto2";

enum ENUM_CMD
{
	CS_LOGIN_REQ = 0;
	CS_LOGIN_RES = 1;

	CS_SEND_MESSAGE_REQ = 4;
	CS_SEND_MESSAGE_RES = 5;

	CS_MESSAGE_NOTIFY = 6;

	CS_CHUNKS_ENTER_LEVAE_VIEW_REQ = 7;
	CS_CHUNKS_ENTER_LEAVE_VIEW_RES = 8;

	CS_ADD_BLOCK_REQ = 9;
	CS_ADD_BLOCK_RES = 10;

	CS_ADD_BLOCK_NOTIFY = 11;

	CS_DELETE_BLOCK_REQ = 12;
	CS_DELETE_BLOCK_RES = 13;

	CS_DELETE_BLOCK_NOTIFY = 14;

	CS_HERO_MOVE_REQ = 15;
	CS_HERO_MOVE_RES = 16;

	CS_REGISTER_REQ = 17;
	CS_REGISTER_RES = 18;

	CS_PLAYER_MOVE_NOTIFY = 19;

	CS_PLAYER_ENTER_VIEW_NOTIFY = 20;
	CS_PLAYER_LEAVE_VIEW_NOTIFY = 21;
}